Refactorying Employee
Refactorying Employee management part.